<resources>
    <string name="app_name">FarmGenius</string>
    <string name="pertanian_splash_screen">Pertanian yang lebih cerdas dimulai dari sini</string>
    <string name="farmgenius_splash_screen">by FarmGenius</string>
    <string name="masuk_sekarang">Masuk Sekarang</string>
    <string name="silakan_masuk">Silakan masukkan detail di bawah ini untuk melanjutkan</string>
    <string name="email_hint">riyandifirman@gmail.com</string>
    <string name="password_hint">********</string>
    <string name="masuk_button">MASUK</string>
    <string name="belum_daftar">Belum memiliki akun? </string>
    <string name="daftar_disini">Daftar disini</string>
    <string name="daftar">Daftar</string>
    <string name="nama_hint">Riyandi Firman</string>
    <string name="daftar_button">DAFTAR</string>
    <string name="sudah_punya_akun">Sudah punya akun? </string>
    <string name="login_disini">Masuk disini</string>
    <string name="email">Email</string>
    <string name="nama">Nama</string>
    <string name="password">Password</string>
    <string name="title">Halo, User!</string>
    <string name="ringkasan">Ringkasan</string>
    <string name="hasil_deteksi">Hasil Deteksi</string>
    <string name="gejala_deteksi">Gejala Bintik Daun Bakteri</string>
    <string name="waktu_deteksi">22 Mei 2023, 9.30</string>
    <string name="tanaman">Tanaman Terdeteksi</string>
    <string name="jumlah_tanaman">20</string>
    <string name="rekomendasi_tanaman">Rekomendasi Tanaman</string>
    <string name="cari">Cari</string>
    <string name="title_rekomendasi_tanam">Rekomendasi Tanaman</string>
    <string name="title_hasil_rekomendasi">Hasil Rekomendasi</string>
    <string name="title_riwayat_deteksi">Riwayat Deteksi</string>
    <string name="title_hasil_deteksi">Hasil Deteksi</string>
    <string name="title_langkah_penanganan">Langkah Penanganan</string>
    <string name="title_profil">Profil</string>
    <string name="title_pengaturan_profil">Pengaturan Profil</string>
    <string name="title_pusat_bantuan">Pusat Bantuan</string>
    <string name="title_syarat_ketentuan">Syarat Ketentuan</string>
    <string name="title_kebijakan_privasi">Kebijakan Privasi</string>
    <string name="title_tentang_pengembang">Tentang Pengembang</string>
    <string name="title_deteksi_tanaman">Deteksi Tanaman</string>
    <string name="email_riyandi">riyandifirman@gmail.com</string>
    <string name="riyandi">Riyandi Firman</string>
    <string name="pengaturan_profil">Pengaturan Profil</string>
    <string name="pusat_bantuan">Pusat Bantuan</string>
    <string name="syarat_ketentuan">Syarat Ketentuan</string>
    <string name="kebijakan_privasi">Kebijakan Privasi</string>
    <string name="tentang_pengembang">Tentang Pengembang</string>
    <string name="keluar">Keluar</string>
    <string name="desc_pusat_bantuan">Apakah Anda memiliki pertanyaan atau menghadapi masalah tertentu? Tidak perlu khawatir! Pusat Bantuan juga menyediakan akses langsung ke tim dukungan pelanggan yang siap membantu Anda dengan cepat dan efisien. Anda dapat mengajukan pertanyaan Anda atau berbagi masalah Anda melalui formulir atau obrolan langsung, dan kami akan dengan senang hati memberikan solusi terbaik untuk Anda.</string>
    <string name="kontak_layanan_pelanggan">Kontak Layanan Pelanggan</string>
    <string name="email_farmgenius">farmgenius@gmail.com</string>
    <string name="kepemilikan_internal">1. Kepemilikan Internal</string>
    <string name="ketersediaan_aplikasi">2. Ketersediaan dan Penggunaan Aplikasi</string>
    <string name="tanggung_jawab_pengguna">3. Tanggung Jawab Pengguna</string>
    <string name="privasi_keamanan_data">4. Privasi dan Keamanan Data</string>
    <string name="perubahan_penghentian">5. Perubahan dan Penghentian</string>
    <string name="batasan_tanggung_jawab">6. Batasan Tanggung Jawab</string>
    <string name="kepemilikan_internal_teks">a. Seluruh hak kekayaan intelektual terkait dengan FarmGenius, termasuk namun tidak terbatas pada merek dagang, hak cipta, dan paten, tetap menjadi milik FarmGenius atau pihak ketiga yang memiliki hak.\nb. Dilarang melakukan reproduksi, penggandaan, pengubahan, atau distribusi konten FarmGenius tanpa izin tertulis yang sah dari FarmGenius.</string>
    <string name="ketersediaan_aplikasi_teks">a. FarmGenius akan berusaha menjaga ketersediaan aplikasi secara terus-menerus, namun tidak dapat menjamin bahwa aplikasi akan beroperasi tanpa gangguan atau kesalahan.\nb. Penggunaan FarmGenius harus sesuai dengan hukum yang berlaku. Tidak diperbolehkan menggunakan aplikasi ini untuk tujuan ilegal atau melanggar hak-hak orang lain.</string>
    <string name="tanggung_jawab_pengguna_teks">a. Pengguna bertanggung jawab penuh atas penggunaan dan konsekuensi yang timbul dari penggunaan FarmGenius.\nb. Penggunaan FarmGenius harus mengikuti pedoman dan instruksi yang tercantum dalam aplikasi.\nc. Penggunaan FarmGenius tidak boleh mengganggu kinerja atau keamanan aplikasi atau merugikan pengguna lain.</string>
    <string name="privasi_keamanan_data_teks">a. FarmGenius akan menjaga kerahasiaan informasi yang dikumpulkan dari pengguna sesuai dengan Kebijakan Privasi yang berlaku.\nb. Pengguna bertanggung jawab atas keamanan akun dan tidak boleh memberikan akses ke akun mereka kepada pihak ketiga tanpa izin tertulis dari FarmGenius.</string>
    <string name="perubahan_penghentian_teks">a. FarmGenius berhak untuk mengubah atau memperbarui syarat dan ketentuan ini dari waktu ke waktu tanpa pemberitahuan sebelumnya.\nb. FarmGenius juga berhak untuk menghentikan atau menangguhkan akses pengguna ke FarmGenius dengan alasan apa pun, termasuk pelanggaran syarat dan ketentuan ini.</string>
    <string name="batasan_tanggung_jawab_teks">a. FarmGenius tidak bertanggung jawab atas kerugian, cedera, atau kerusakan yang timbul dari penggunaan aplikasi ini.\nb. FarmGenius tidak memberikan jaminan eksplisit atau implisit mengenai keakuratan, keandalan, atau ketersediaan aplikasi ini.</string>
    <string name="informasi_kumpulkan">1. Informasi yang kami kumpulkan</string>
    <string name="penggunaan_informasi">2. Penggunaan Informasi</string>
    <string name="bagikan_informasi">3. Bagikan Informasi</string>
    <string name="informasi_kumpulkan_teks">a. Informasi Pribadi: Kami dapat mengumpulkan informasi pribadi yang Anda berikan secara sukarela, seperti nama, alamat email, dan informasi profil pengguna.\nb. Informasi Penggunaan: Kami dapat mengumpulkan informasi tentang bagaimana Anda menggunakan FarmGenius, termasuk aktivitas, log masuk, preferensi, dan pengaturan.\nc. Informasi Perangkat: Kami dapat mengumpulkan informasi tentang perangkat yang Anda gunakan untuk mengakses FarmGenius, seperti jenis perangkat, sistem operasi, ID perangkat unik, dan pengaturan perangkat.</string>
    <string name="penggunaan_informasi_teks">a. Kami menggunakan informasi yang dikumpulkan untuk menyediakan, mengoperasikan, dan meningkatkan FarmGenius, serta memberikan dukungan pelanggan yang efektif.\nb. Kami dapat menggunakan informasi untuk mengirimkan pembaruan, pemberitahuan, dan informasi terkait FarmGenius kepada Anda.\nc. Informasi anonim atau agregat dapat digunakan untuk tujuan analisis, penelitian pasar, atau pengembangan produk, dengan tidak mengidentifikasi informasi pribadi individu.</string>
    <string name="bagikan_informasi_teks">a. Kami tidak akan membagikan informasi pribadi Anda kepada pihak ketiga kecuali dengan persetujuan Anda atau jika diperlukan oleh hukum.\nb. Kami dapat menggunakan penyedia layanan pihak ketiga untuk membantu dalam pengoperasian FarmGenius, dan mereka akan memiliki akses terbatas ke informasi Anda hanya untuk tujuan yang diperlukan.</string>
    <string name="hedrin">Hedrin Sitorus</string>
    <string name="husada">Husada Hutasoit</string>
    <string name="iman">Iman Nurohman</string>
    <string name="reyhan">Reyhan Agus</string>
    <string name="rolasta">Rolasta Sitorus</string>
    <string name="cc">Cloud Computing Engineer</string>
    <string name="ml">Machine Learning Engineer</string>
    <string name="md">Mobile Development Engineer</string>
    <string name="suhu">Suhu Daerah </string>
    <string name="kelembapan">Tingkat Kelembapan Daerah </string>
    <string name="luas_tanah">Luas Hektar Tanah </string>
    <string name="suhu2">Suhu Daerah : </string>
    <string name="kelembapan2">Tingkat Kelembapan Daerah : </string>
    <string name="ph_tanah">pH Tanah : </string>
    <string name="curah_hujan">Curah Hujan : </string>
    <string name="nitrogen">Nitrogen Tanah : </string>
    <string name="fosfor">Fosfor Tanah : </string>
    <string name="kalium">Kalium Tanah : </string>
    <string name="lihat_rekomendasi">Lihat Rekomendasi</string>
    <string name="suffix_temperature">°C</string>
    <string name="suffix_humidity">%</string>
    <string name="suffix_area">Ha</string>
    <string name="title_rekomendasi">Bingung cari tahu tanaman yang pas untuk dipelihara? Cari tahu disini!</string>
    <string name="lihat">Lihat</string>
    <string name="result_title_detect">Gejala Bintik Daun Bakteri</string>
    <string name="result_date">22 Mei 2023, 14:30</string>
    <string name="result_descrption">"Gejala bercak daun bakteri meliputi munculnya lesi bermata hitam, bintik-bintik cokelat dengan lingkaran cahaya kuning, atau hanya area terang dan gelap pada dedaunan. Bercak-bercak ini tidak beraturan dan berukuran antara 3/16 dan inci (lima milimeter hingga satu sentimeter). Bercak ini dapat terjadi pada bagian atas atau bawah daun dan membunuh bagian jaringan ketika berkumpul bersama. "</string>
    <string name="lihat_cara_penanganan">Lihat Cara Penanganan</string>
    <string name="result_treatment">1. Sanitasi kebun\n2. Mengurangi kelembaban\n3. Daun-daun bawah yang terinfeksi secepatnya diambil agar tidak menjadi sumber penularan\n4. Pemanenan tepat waktu\n5. Eradikasi tanaman yang sakit\n6. Penyemprotan dengan fungisida berbahan aktif Mancozeb, Captan, Captafol, Metil tiofanat, Benomil , Antracol</string>
    <string name="beranda">Beranda</string>
    <string name="choose_source">Pilih sumber gambar</string>
    <string name="deteksi">Deteksi</string>
    <string name="galeri">Galeri</string>
    <string name="kamera">Kamera</string>
    <string name="helper_password">Terdiri dari minimal 1 huruf besar dan angka (minimal 8 karakter)</string>
    <string name="skala_kelembapan">skala 1-100%</string>
    <string name="title_input_nitrogen">Nitrogen Tanah</string>
    <string name="title_input_fosfor">Fosfor Tanah</string>
    <string name="title_input_kalium">Kalium Tanah</string>
    <string name="title_input_ph">pH Tanah</string>
    <string name="title_input_curah">Curah Hujan</string>
    <string name="suffix_input_nitrogen">ppm</string>
    <string name="suffix_input_fosfor">ppm</string>
    <string name="suffix_input_kalium">ppm</string>
    <string name="suffix_input_ph">pH</string>
    <string name="suffix_input_curah">mm</string>
    <string name="result_recomendation">Tanaman yang direkomendasikan</string>
</resources>