<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileTermsConditionsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.profile.ProfileTermsConditionsActivity">

        <TextView
            android:id="@+id/title_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/title_syarat_ketentuan"
            android:textAppearance="@style/title_page"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            app:layout_constraintBottom_toBottomOf="@+id/title_page"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/title_page"
            app:srcCompat="@drawable/ic_back" />

        <TextView
            android:id="@+id/title_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="32dp"
            android:text="@string/kepemilikan_internal"
            android:textAppearance="@style/tc_page"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_page" />

        <TextView
            android:id="@+id/desc_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginEnd="30dp"
            android:justificationMode="inter_word"
            android:textAppearance="@style/tc_page"
            android:text="@string/kepemilikan_internal_teks"
            android:lineSpacingExtra="2sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_1" />

        <TextView
            android:id="@+id/title_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="4dp"
            android:text="@string/ketersediaan_aplikasi"
            android:textAppearance="@style/tc_page"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/desc_1" />

        <TextView
            android:id="@+id/desc_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginEnd="30dp"
            android:justificationMode="inter_word"
            android:textAppearance="@style/tc_page"
            android:text="@string/ketersediaan_aplikasi_teks"
            android:lineSpacingExtra="2sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_2" />

        <TextView
            android:id="@+id/title_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="4dp"
            android:text="@string/tanggung_jawab_pengguna"
            android:textAppearance="@style/tc_page"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/desc_2" />

        <TextView
            android:id="@+id/desc_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginEnd="30dp"
            android:justificationMode="inter_word"
            android:textAppearance="@style/tc_page"
            android:text="@string/tanggung_jawab_pengguna_teks"
            android:lineSpacingExtra="2sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_3" />

        <TextView
            android:id="@+id/title_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="4dp"
            android:text="@string/privasi_keamanan_data"
            android:textAppearance="@style/tc_page"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/desc_3" />

        <TextView
            android:id="@+id/desc_4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginEnd="30dp"
            android:justificationMode="inter_word"
            android:textAppearance="@style/tc_page"
            android:text="@string/privasi_keamanan_data_teks"
            android:lineSpacingExtra="2sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_4" />

        <TextView
            android:id="@+id/title_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="4dp"
            android:text="@string/perubahan_penghentian"
            android:textAppearance="@style/tc_page"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/desc_4" />

        <TextView
            android:id="@+id/desc_5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginEnd="30dp"
            android:justificationMode="inter_word"
            android:textAppearance="@style/tc_page"
            android:text="@string/perubahan_penghentian_teks"
            android:lineSpacingExtra="2sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_5" />

        <TextView
            android:id="@+id/title_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="4dp"
            android:text="@string/batasan_tanggung_jawab"
            android:textAppearance="@style/tc_page"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/desc_5" />

        <TextView
            android:id="@+id/desc_6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="32dp"
            android:justificationMode="inter_word"
            android:textAppearance="@style/tc_page"
            android:text="@string/batasan_tanggung_jawab_teks"
            android:lineSpacingExtra="2sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_6" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

