<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.recomendation.RecomendationActivity">

    <TextView
        android:id="@+id/title_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/title_rekomendasi_tanam"
        android:textAppearance="@style/title_page"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        app:layout_constraintBottom_toBottomOf="@+id/title_page"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/title_page"
        app:srcCompat="@drawable/ic_back" />

    <TextView
        android:id="@+id/tv_recomendation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="28dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/title_rekomendasi"
        android:justificationMode="inter_word"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_page" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutTemperature"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="28dp"
        android:hint="@string/suhu"
        app:suffixText="@string/suffix_temperature"
        app:endIconTint="#7ED957"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_recomendation"
        app:startIconDrawable="@drawable/ic_temperature"
        app:startIconTint="#7ED957">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextTemperature"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutHumidity"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="28dp"
        android:hint="@string/kelembapan"
        app:suffixText="@string/suffix_humidity"
        app:endIconTint="#7ED957"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutTemperature"
        app:startIconDrawable="@drawable/ic_humidity"
        app:startIconTint="#7ED957">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextHumidity"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutHectare"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="28dp"
        android:hint="@string/luas_tanah"
        app:suffixText="@string/suffix_area"
        app:endIconTint="#7ED957"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutHumidity"
        app:startIconDrawable="@drawable/ic_area"
        app:startIconTint="#7ED957">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextHectare"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cari_button"
        android:layout_width="296dp"
        android:layout_height="41dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_see_recomendation"
        android:text="@string/lihat_rekomendasi"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutHectare" />

</androidx.constraintlayout.widget.ConstraintLayout>